# python-cloud-gcp-pubsub

./: .gitignore  Dockerfile  Pipfile  README.md  config.py  docker-compose.yml  main.py
data/: heineken-larger-beer.json
iam/: identity_access_management.py
kubernetes/charts/google-cloud-pubsub/: Chart.yaml  values.yaml
kubernetes/charts/google-cloud-pubsub/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service-account.yaml  service.yaml  serviceaccount.yaml
kubernetes/charts/google-cloud-pubsub/templates/tests/: test-connection.yaml
publisher/: publisher.py  topic.py
resources/data/: india-pale-ale-opa-bier.json
resources/docker/: docker-compose.yml
resources/kubernetes/charts/google-cloud-pubsub/: Chart.yaml  values.yaml
resources/kubernetes/charts/google-cloud-pubsub/templates/: deployment.yaml  secrets.yml
src/: main.py  pyproject.toml  requirements.txt
src/app/crosscutting/: stop_watch.py
src/app/infra/settings/: config.py
src/app/streaming/publisher/: __init__.py  topic.py
src/app/streaming/subscriber/: subscription.py
src/tests/: subscriber_test.py
subscriber/: subscription.py
utils/: __init__.py  file.py  logging.py  singleton.py
