[tool.poetry]
name = "google-cloud-pubsub-microservice"
version = "0.0.1"
description = "This project is intended to be part of a reference architecture for microservices with GCP PubSub."
authors = [
    { name = "Luis Ricardo Sabino", email = "ricardosabinolrs@gmail.com" },
]
classifiers = [
    "Topic :: Software Development"
]
requires-python = ">=3.7"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
homepage = "https://github.com/RicardoSabinolrs/fastapi-microservice"
documentation = "https://github.com/RicardoSabinolrs/fastapi-microservice"
repository = "https://github.com/RicardoSabinolrs/fastapi-microservice"

[tool.black]
color = true
exclude = '''
    /(
        \.git
        | \._build
        | \.back.out
        | \.build
        | \.coverage
        | \.dist
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | ./src/coverage
        | blib2to3
        | tests/data
    )/
'''
include = '\.pyi?$'
line-length = 119

[tool.isort]
color_output = true
combine_as_imports = true
ensure_newline_before_comments = true
force_alphabetical_sort_within_sections = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 119
lines_between_sections = 1
multi_line_output = 3
profile = "black"
skip = [
    ".coverage",
    "coverage/*",
    "cov.html",
    ".dockerignore",
    ".env",
    ".github",
    ".gitignore",
    ".html",
    ".md",
    ".python-version",
    ".rst",
    ".xml"
]
skip_gitignore = true
src_paths = [
    "app/",
    "tests/",
]
use_parentheses = true

[tool.mypy]
check_untyped_defs = true
color_output = true
error_summary = true
exclude = "(build|data|dist|docs/src|images|logo|logs|output)/"
ignore_missing_imports = true
pretty = true
python_version = "3.11"
strict_optional = true
warn_no_return = true
warn_return_any = false

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test", "Acceptance"]
python_functions = ["test_*"]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
    --verbose
    -p no:warnings
    --strict-markers
    --tb=short
    --cov=src
    --cov=tests
    --cov-branch
    --cov-report=term-missing
    --cov-report=html:coverage/cov.html
    --cov-report=xml:coverage/cov.xml
    --no-cov-on-fail
    --cov-fail-under=63
    --numprocesses=auto
    --asyncio-mode=auto
'''